@@ -34,6 +34,10 @@ Valerio Pilo
   Jackdmp changes log
 ---------------------------
 
+2011-03-11 Stephane Letz  <letz@grame.fr>
+
+	* Correct JackNetMaster::SetBufferSize.
+
 2011-03-10 Stephane Letz  <letz@grame.fr>
 
 	* Latency callback must always be activated.
